API fixes and google cloud works now
